--- a/src/Components/HomeFashion/homeFashion.css
+++ b/src/Components/HomeFashion/homeFashion.css
@@ -2,18 +2,20 @@
     flex:5;
 }
 .homeFashionWrapper{
-    width: 87%;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     -webkit-box-shadow: 0px 1px 16px -8px rgba(0,0,0,0.67);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
     background-color: white;
 }
 .margin{
-    margin-right: 20px;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 .homeFashionTop{
-    height: 40px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -28,12 +30,12 @@
 .homeFashionTop h5{
     margin: 0;
     padding: 0;
-    font-size: 23px;
+    font-size: 17px;
     color: white;
     margin-left: 10px;
 }
 .homeFashionTop span{
-    font-size: 18px;
+    font-size: 12px;
     color: black;
     cursor: pointer;
     margin-right: 10px;
@@ -44,7 +46,7 @@
 }
 .homeFashionMiddle img{
     width: 100%;
-    height: 150px;
+    height: 70px;
     object-fit: cover;
     transition: all 0.7s ease;
 }
@@ -58,20 +60,32 @@
     
 }
 .homeFashionBottomImg{
-    width: 144px !important;
-    height: 172px !important;
+    width: 134px !important;
+    height: 150px !important;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid #dedede;
 }
 .homeFashionBottomImg img{
-    width: 80px;
-    height: 80px;
-    margin: 10px;
+    width: 60px;
+    height: 60px;
+    margin: 4px;
     object-fit: cover;
     transition: 0.5s ease;
     -webkit-transition: 0.5s ease
+}
+.homeFashionBottomImg button{
+    visibility: visible;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff !important;
+    background-color: #e61601;
+    padding: 2px;
+    border: none;
+    cursor: pointer;
 }
 .homeFashionBottomImg img:hover{
     transform: scale(1.1);
@@ -79,12 +93,12 @@
 .homeFashionBottomImg h5{
     margin: 0;
     padding: 0;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 800;
     color: #e61601;
 }
 .homeFashionBottomImg span{
-    margin: 8px 0;
+    margin: 2px 0;
 }
 .homeFashionBottomImg p{
     padding: 0;
@@ -104,8 +118,8 @@
         margin-bottom: 20px;
     }
     .homeFashionBottomImg{
-        width: 129px !important;
-        height: 175px !important;
+        width: 127px !important;
+        height: 133px !important;
     }
     .homeFashionBottomImg img{
         width: 50px;
