--- a/src/Components/HomeGadget/homeGadget.css
+++ b/src/Components/HomeGadget/homeGadget.css
@@ -1,7 +1,7 @@
-.homeFashion{
-    flex:6;
+.homeGadget{
+    flex:5;
 }
-.homeFashionWrapper{
+.homeGadgetWrapper{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -9,82 +9,118 @@
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
     background-color: white;
 }
-.homeFashionTop{
-    height: 40px;
+.margin{
+    margin-right: 20px;
+}
+.homeGadgetTop{
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.homeFashionTopH5{
+.homeGadgetTopH5{
     width: 40%;
     height: 100%;
     display: flex;
     align-items: center;
     background-color: #e61601;
 }
-.homeFashionTop h5{
+.homeGadgetTop h5{
     margin: 0;
     padding: 0;
-    font-size: 23px;
+    font-size: 17px;
     color: white;
     margin-left: 10px;
 }
-.homeFashionTop span{
-    font-size: 18px;
+.homeGadgetTop span{
+    font-size: 12px;
     color: black;
     cursor: pointer;
     margin-right: 10px;
    transition: all 0.5s;
 }
-.homeFashionTop span:hover{
+.homeGadgetTop span:hover{
     color: #f43d29;
 }
-.homeFashionMiddle img{
+.homeGadgetMiddle img{
     width: 100%;
-    height: 150px;
+    height: 70px;
     object-fit: cover;
     transition: all 0.7s ease;
 }
-.homeFashionMiddle img:hover{
+.homeGadgetMiddle img:hover{
     transform: scale(1.09);
 }
-.homeFashionBottom{
+.homeGadgetBottom{
     display: flex;
     flex-wrap: wrap;
     cursor: pointer;
     
 }
-.homeFashionBottomImg{
-    width: 178px;
-    height: 180px;
+.homeGadgetBottomImg{
+    width: 134px !important;
+    height: 150px !important;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid #dedede;
 }
-.homeFashionBottomImg img{
-    width: 80px;
-    height: 80px;
-    margin: 10px;
+.homeGadgetBottomImg img{
+    width: 60px;
+    height: 60px;
+    margin: 4px;
     object-fit: cover;
     transition: 0.5s ease;
     -webkit-transition: 0.5s ease
 }
-.homeFashionBottomImg img:hover{
+.homeGadgetBottomImg button{
+    visibility: visible;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff !important;
+    background-color: #e61601;
+    padding: 2px;
+    border: none;
+    cursor: pointer;
+}
+.homeGadgetBottomImg img:hover{
     transform: scale(1.1);
 }
-.homeFashionBottomImg h5{
+.homeGadgetBottomImg h5{
     margin: 0;
     padding: 0;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 800;
     color: #e61601;
 }
-.homeFashionBottomImg span{
-    margin: 8px 0;
+.homeGadgetBottomImg span{
+    margin: 2px 0;
 }
-.homeFashionBottomImg p{
+.homeGadgetBottomImg p{
     padding: 0;
     margin: 0;
     text-decoration: line-through;
+}
+
+@media screen and (max-width:700px) {
+    .homeGadget{
+        flex: 5 1 100% !important;
+    }
+    .homeGadgetWrapper{
+        width: 100%;
+    }
+    .margin{
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+    .homeGadgetBottomImg{
+        width: 129px !important;
+        height: 175px !important;
+    }
+    .homeGadgetBottomImg img{
+        width: 50px;
+        height: 50px;
+    }
 }
