--- a/src/Components/Slider/slider.css
+++ b/src/Components/Slider/slider.css
@@ -1,46 +1,52 @@
 .slider{
     flex: 5;
+    margin-right: 15px;
 }
 .sliderWrapper{
-    width: 96%;
-    height: 300px;
+    width: 100%;
+    height: 250px;
     background-color: white;
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
     border-radius: 10px;
-}
-.carousel {
     overflow: hidden;
     position: relative;
-    width: 100%;
-    height: 300px !important;
-    perspective: 500px;
-    transform-style: preserve-3d;
-    transform-origin: 0% 50%;
 }
-
-.carousel .carousel-item {
-    visibility: hidden;
+.carousel{
+    width: 100%;
+    height: 100%;
+    /* display: flex; */
+    flex-direction: row;
+    overflow: hidden;
+    position: relative;
+}
+.carouselItem{
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
+.carouselItemWrapper{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.carouselItemWrapper img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+}
+.Arrow{
     position: absolute;
     top: 0;
-    left: 0;
-}
-element.style {
-    transform: translateX(0px) translateX(-641px) translateZ(0px);
-    z-index: -1;
-    opacity: 1;
-    visibility: visible;
-}
-.carousel-items{
-    width: 100% !important;
-    height: 100% !important;
-    object-fit: cover !important;
-    border-radius: 10px;
+    margin: 0 15px;
+    font-size: 100px !important;
 }
 
 @media screen and (max-width:700px) {
     .slider{
         flex: 5 1 100%;
+        margin-right: 0px;
     }
     .sliderWrapper{
         width: 100%;
