--- a/src/Components/TopSales/topsales.css
+++ b/src/Components/TopSales/topsales.css
@@ -1,12 +1,16 @@
 .TopSales{
     width: 100vw;
     display: flex;
+    align-items: center;
     justify-content: center;
+    overflow-x: hidden;
+}
+.MuiLink-underlineHover:hover {
+    text-decoration: none !important;
 }
 .TopSalesWrapper{
     width: 87%;
     background-color: white;
-    /* height: 290px; */
     display: flex;
     flex-direction: column;
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
@@ -14,27 +18,27 @@
 }
 .TopSalesTop{
     background-color: #e61601;
-    height: 40px;
+    height: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .TopSalesTop h5{
     margin-left: 10px;
-    font-size: 23px;
+    font-size: 17px;
     color: white;
     font-weight: 700 ;
 }
 .TopSalesTop h6{
-    font-size: 17px;
+    font-size: 13px;
     color: white;
     font-weight: 700 ;
 }
 .TopSales span{
     margin-right: 10px;
-    font-size: 14px;
+    font-size: 12px;
     color: white;
-    padding: 10px;
+    padding: 5px;
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.7 ease-in-out;
@@ -48,37 +52,66 @@
     flex-wrap: wrap;    
 }
 .TopSalesBottomCard{
-    margin: 15px 18px;
-    width: 200px;
+    margin: 7px 9px;
+    width: 150px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.7s ease;
     /* background-color: black; */
 }
-.TopSalesBottomCard img{
-    width: 170px;
-    height: 150px;
-    object-fit: cover;
-    cursor: pointer;
-    transition: all 1s ease-in-out;
+.TopSalesBottomCard button{
+   visibility: hidden;
 }
-.TopSalesBottomCard img:hover{
-    transform: scale(1.1);
+.TopSalesBottomCard:hover{
+    -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
+    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
+}
+.TopSalesBottomCard:hover button{
+    visibility: visible;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff !important;
+    background-color: #e61601;
+    padding: 5px;
+    border: none;
+    cursor: pointer;
+}
+.TopSalesBottomCard img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
 }
 .TopSalesBottomCard h5{
     margin: 0;
     padding: 0;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 500;
+    color: black !important;
+
+}
+.TopSalesBottomCard >div{
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    font-weight: 500;
+    color: black !important;
+
 }
 .TopSalesBottomCard span{
     margin: 0;
     padding: 0;
-    font-size: 15px;
-    color: black;
+    font-size: 12px;
+    color: black !important;
 }
 .TopSalesBottomCard p{
     margin: 0;
     padding: 0;
-    font-size: 15px;
-    color: black;
+    font-size: 12px;
+    color: black  !important;
 }
 
 @media screen and (max-width:700px) {
@@ -93,9 +126,7 @@
     }
     .TopSalesTop h5{
         margin-left: 10px;
-        font-size: 17px;
         color: white;
-        text-align: center;
     }
     .TopSalesTop h6{
         font-size: 12px;
@@ -108,13 +139,11 @@
         border-radius: 5px;
     }
     .TopSalesBottomCard{
-        margin: 15px 18px;
+        margin: 3px 7px;
         width: 100px;
         /* background-color: black; */
     }
-    .TopSalesBottomCard img{
-        width: 120px;
-        height: 100px;
-        object-fit: cover;
+    .TopSalesBottomCard h5{
+        text-align: center;
     }
 }
