--- a/src/Components/Topbar/topbar.css
+++ b/src/Components/Topbar/topbar.css
@@ -1,15 +1,18 @@
 .topbarContainer{
     width: 100vw;
-    height: 100px;
-    background-color: #f22913;
+    height: 50px;
+    background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
+    position: sticky;
+    z-index: 999;
+    top: 0;
 }
 .topbarWrapper{
-    background-color: #ed311c;
+    background-color: #fff;
     width: 87%;
     height: 100%;
     display: flex;
@@ -19,8 +22,21 @@
 .topbarRight{
     flex: 2;
 }
+.topbarRight{
+    display: flex;
+    align-items: center;
+}
 .topbarRight img {
+    height: 36px;
+    /* width: 100px; */
     object-fit: cover;
+}
+.topbarRight h3 {
+    color: black;
+    letter-spacing: 4px;
+    padding: 0;
+    margin: 0 5px;
+    font-size: 17px;
 }
 .topbarMiddle{
     flex: 4;
@@ -29,18 +45,18 @@
 }
 .topbarMiddleSearch{
     display: flex;
-    background-color: white;
+    /* background-color: rgb(255, 3, 3); */
     width: 80%;
     height: 10px;
     align-items: center;
-    border-radius: 10px;
-    padding: 20px 15px;
+    padding: 10px 5px;
+    border: 1px solid black;
     
     
 }
 .topbarMiddleSearch input{
     border: none;
-    font-size: 18px;
+    font-size: 12px;
     margin-left: 10px;
 }
 .topbarMiddleSearch input:focus{
@@ -60,13 +76,18 @@
     align-items: center;
     margin-right: 10px;
     cursor: pointer;
+    padding: 2px;
 }
 .topbarLeftInfo span{
-    color: white;
+    color: black;
     margin-left: 5px;
     margin-right: 5px;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 600;
+}
+.topbarLeftInfo:hover{
+    background-color: #eee;
+    border-radius: 10px;
 }
 .hidden{
     display: none !important;
