--- a/src/Components/FlashPromotion/flashPromotion.css
+++ b/src/Components/FlashPromotion/flashPromotion.css
@@ -7,5 +7,10 @@
     height: 100%;
     object-fit: cover;
 }
-
+@media screen and (max-width:700px) {
+    .flashPromotion{
+        flex: 1;
+        height: 50px !important;
+    }
+}
 
