--- a/src/Components/Product/products.css
+++ b/src/Components/Product/products.css
@@ -17,7 +17,7 @@
     flex-direction: column;
 }
 .productProductsTop{
-    height: 40px;
+    height: 30px;
     border-bottom: 1px solid #eee;
     justify-content: center;
     align-items: center;
@@ -25,7 +25,7 @@
 }
 .productProductsTop h5{
     color: #e61601;
-    font-size: 22px;
+    font-size: 17px;
     font-weight: 800;
     margin: 0;
     padding: 0;
@@ -36,9 +36,9 @@
     flex-wrap: wrap;
 }
 .productsListsWrapper{
-    width: 210px;
-    height: 320px;
-    margin: 10px 13px;
+    width: 150px;
+    height: 200px;
+    margin: 5px 6px;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
 }
@@ -48,7 +48,7 @@
     border: none;
     border-radius: 5%;
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     visibility: hidden;
     cursor: pointer;
@@ -62,35 +62,65 @@
     visibility: visible;
 }
 .productListsTop{
-    width: 170px;
-    height: 200px;
-    margin: 10px 13px;
+    width: 100px;
+    height: 100px;
+    margin: 5px 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .productListsTop img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    margin-left: 30px;
 }
 .productListsBottom{
     margin: 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .productListsBottom h5{
     color: #e61601;
-    font-size: 17px;
+    font-size: 14px;
     margin: 0;
     padding: 0;
     font-weight: 500;
+    text-align: center;
 }
 .productListsBottom span{
     margin: 3px 0;
     padding: 0;
-    font-size: 15px;
+    font-size: 13px;
     color: black;
+    text-align: center;
 }
 .productListsBottom p{
     margin: 0;
     padding: 0;
-    font-size: 15px;
+    font-size: 12px;
     color: black;
+    text-align: center;
     text-decoration: line-through;
+}
+
+
+@media screen and (max-width:700px) {
+    .productsProduct{
+        margin-right: 0%;
+    }
+    .productListsTop{
+        width: 80px;
+        height: 100px;
+        margin: 5px 6px;
+    }
+    .productsListsWrapper{
+        width: 120px;
+        height: 200px;
+        margin: 4px 3px;
+        cursor: pointer;
+        transition: all 0.5s ease-in-out;
+    }
 }
