--- a/src/Components/Slider/slider.css
+++ b/src/Components/Slider/slider.css
@@ -17,20 +17,11 @@
     height: 100%;
     /* display: flex; */
     flex-direction: row;
-    overflow: hidden;
-    position: relative;
-}
-.carouselItem{
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-}
-.carouselItemWrapper{
+    opacity: 1;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    transition: opacity ease-in-out 0.4s;
 }
-.carouselItemWrapper img{
+.carousel img{
     width: 100%;
     height: 100%;
     position: absolute;
