--- a/src/Page/Admin/Component/Topbar/topbar.css
+++ b/src/Page/Admin/Component/Topbar/topbar.css
@@ -1,5 +1,5 @@
 .topbarAdminContainer{
-    width: 100vw;
+    width: 100%;
     height: 50px;
     background-color: #fff;
     display: flex;
@@ -17,7 +17,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     
 }
 .topbarAdminRight{
