--- a/src/Page/Admin/Product/Clothes/cloth.css
+++ b/src/Page/Admin/Product/Clothes/cloth.css
@@ -1,5 +1,6 @@
 .cloth{
     width: 100vw;
+    display: flex;
 }
 .clothContainer{
     display: flex;
@@ -11,22 +12,41 @@
     justify-content: center;
     padding: 20px;
 }
-.clothWrapperSearchContainer{
-    display: flex;
-    margin-bottom: 10px ;
-    justify-content: flex-end;
-    align-items: center;
-}
-.clothWrapperSearchContainer button{
+
+.clothWrapper button{
     padding: 10px;
     background-color: green;
     color: white;
     border: none;
     cursor: pointer;
     transition: all 0.6s ease-in-out;
+    margin-bottom: 20px;
 }
-.clothWrapperSearchContainer button:hover{
+.clothWrapper button:hover{
     background-color: rgb(9, 156, 9);
+}
+.productWrapper{
+    height: 35px;
+}
+.productWrapper button{
+    padding: 10px;
+    width: 150px;
+    background-color: rgb(107, 108, 107);
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: all 0.6s ease-in-out;
+    margin-right: 20px;
+}
+.productWrapper button:hover{
+    background-color: rgb(9, 156, 9);
+}
+.clothWrapperSearchContainer{
+    display: flex;
+    margin-bottom: 10px ;
+    justify-content: flex-end;
+    align-items: center;
+    border-top: none !important;
 }
 .clothWrapperSearch{
     display: flex;
@@ -34,7 +54,8 @@
     background-color: #fff;
     align-items: center;
     padding: 5px;
-    border: 1px solid black ;
+    
+    align-self: flex-end;
 
 }
 .clothWrapperSearch input{
@@ -46,23 +67,30 @@
 }
 .clothWrapper table{
     width: 97%;
-    border-top: 1px solid #ccc;
-	border-left: 1px solid #ccc;
+    -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
+    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
+    background-color: #fff;
 }
 .clothWrapper table thead{
-    background-color: grey;
+    color: #ccc;
     height: 30px;
     font-size: 15px;
-    border-bottom: 1px solid #ccc;
-	border-right: 1px solid #ccc;
+    /* border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc; */
     padding: 8px;
+    text-align: start;
+    
+}
+.clothWrapper table th{
+    text-align: start !important;
+    
 }
 .clothWrapper table td{
-	border-bottom: 1px solid #ccc;
-	border-right: 1px solid #ccc;
+	/* border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc; */
 	padding: 8px;
     font-size: 12px;
-    text-align: center;
+    text-align: start;
 }
 .clothWrapper table td button{
 	border: none;
@@ -75,9 +103,9 @@
     width: 50px;
     border-radius: 5px;
 }
-.clothWrapper table tr:nth-child(even){
+/* .clothWrapper table tr:nth-child(even){
 	background-color: #ccc;
-}
+} */
 .trHover:hover{
     background-color: rgb(231, 228, 228);
 }
