product Api consume

--- a/src/Page/Admin/Component/AdminSide/adminSide.css
+++ b/src/Page/Admin/Component/AdminSide/adminSide.css
@@ -1,14 +1,15 @@
 .adminSide{
     flex: 1 1;
-}
-.adminSideWrapper{
+    width: 100%;
     background-color: #fff;
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
-    height: 100vh;
     position: sticky;
-    /* overflow-y: scroll; */
     top: 0px;
+    height: 100vh;
+}
+.adminSideWrapper{
+    
 }
 .AdminSideTop{
     display: flex;
@@ -48,7 +49,7 @@
     padding: 1px !important;
     /* transform: translateY(0%); */
     transition: transform 0.7s ease-in;
-    /* animation: slideDown 0.4s linear; */
+    animation: slideDown 0.4s linear;
 }
 .mouseRev{
     animation: slideDown 0.6s linear;
@@ -72,25 +73,6 @@
 .detail:hover{
     color:blue !important
 }
-.example-enter {
-    opacity: 0 !important;
-    transform:translateX(-100%) !important;
-  }
-  .example-enter-active {
-    opacity: 1 !important;
-    transform:translateX(0) !important;
-    transition: opacity 300ms, transform 300ms !important;
-  }
-  .example-exit {
-    opacity: 1 !important;
-    transform:translateX(0) !important;
-  }
-  .example-exit-active {
-    opacity: 0 !important;
-    transform:translateX(-100%) !important;
-    transition: opacity 300ms, transform 300ms !important;
-  }
-
 
 
 @keyframes slideDown {
@@ -112,6 +94,6 @@
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(-2%);
   }
 }
