--- a/src/Page/Admin/Component/Topbar/topbar.css
+++ b/src/Page/Admin/Component/Topbar/topbar.css
@@ -1,5 +1,5 @@
 .topbarAdminContainer{
-    width: 97%;
+    width: 100%;
     height: 50px;
     background-color: #fff;
     display: flex;
@@ -9,7 +9,6 @@
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
     position: sticky;
     z-index: 999;
-    margin-top: 10px;
     border-radius: 5px;
     top: 0;
 }
@@ -25,7 +24,6 @@
 .topbarAdminRight{
 }
 .topbarAdminRight{
-    margin-left: 20px;
     display: flex;
     align-items: center;
 }
@@ -64,8 +62,8 @@
     background-color: #eee;
     border-radius: 10px;
 }
-.hidden{
-    display: none !important;
+.hiddens{
+    display: block !important;
     cursor: pointer;
 }
 
