--- a/src/Page/Admin/Product/Clothes/cloth.css
+++ b/src/Page/Admin/Product/Clothes/cloth.css
@@ -13,38 +13,51 @@
     padding: 20px;
 }
 
-.clothWrapper button{
+.clothWrapperButton{
     padding: 10px;
     background-color: green;
     color: white;
     border: none;
     cursor: pointer;
     transition: all 0.6s ease-in-out;
-    margin-bottom: 20px;
 }
-.clothWrapper button:hover{
+.clothWrapperButton:hover{
     background-color: rgb(9, 156, 9);
 }
 .productWrapper{
     height: 35px;
+    width: 99%;
+    display: flex;
+    justify-content: space-between;
+    margin-right: 20px;
 }
 .productWrapper button{
     padding: 10px;
     width: 150px;
-    background-color: rgb(107, 108, 107);
-    color: white;
+    background-color: rgb(189, 189, 189);
+    color: black;
     border: none;
     cursor: pointer;
     transition: all 0.6s ease-in-out;
     margin-right: 20px;
 }
 .productWrapper button:hover{
-    background-color: rgb(9, 156, 9);
+    background-color: rgb(136, 136, 136);
+}
+.pactive{
+    background-color: #f0f2f5 !important;
+    color: black;
+    border-top: none !important;
+    border-bottom: 1px solid rgb(207, 212, 207) !important ;
+    border-left: 1px solid rgb(207, 212, 207) !important;
+    border-right: 1px solid rgb(207, 212, 207) !important;
+    cursor: not-allowed !important;
+    column-rule-color: red !important;
 }
 .clothWrapperSearchContainer{
     display: flex;
     margin-bottom: 10px ;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     border-top: none !important;
 }
@@ -54,7 +67,6 @@
     background-color: #fff;
     align-items: center;
     padding: 5px;
-    
     align-self: flex-end;
 
 }
@@ -70,27 +82,29 @@
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
     background-color: #fff;
+    transition: transform 0.7s ease-in;
+    animation: slideUp 0.4s linear;
+
 }
 .clothWrapper table thead{
     color: #ccc;
     height: 30px;
     font-size: 15px;
-    /* border-bottom: 1px solid #ccc;
-	border-right: 1px solid #ccc; */
     padding: 8px;
     text-align: start;
     
 }
 .clothWrapper table th{
     text-align: start !important;
-    
 }
 .clothWrapper table td{
-	/* border-bottom: 1px solid #ccc;
-	border-right: 1px solid #ccc; */
 	padding: 8px;
     font-size: 12px;
     text-align: start;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+    text-align: start;
+    vertical-align: top;
 }
 .clothWrapper table td button{
 	border: none;
@@ -102,12 +116,21 @@
     margin-right: 10px;
     width: 50px;
     border-radius: 5px;
+    
 }
 /* .clothWrapper table tr:nth-child(even){
 	background-color: #ccc;
 } */
 .trHover:hover{
     background-color: rgb(231, 228, 228);
+}
+.tablePaddination{
+    height: 50px;
+    width: 97%;
+    background-color: rgb(229, 228, 228);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
@@ -147,8 +170,10 @@
     width: 100%;
 }
 .userFormLeft input, .userFormRight input{
-    border: none;
-    border-bottom: 1px solid black !important;
+    border-bottom: 1px solid black;
+    border-left: none;
+    border-right: none;
+    border-top: none;
     margin-bottom: 20px;
     padding: 10px;
     font-size: 14px;
@@ -172,6 +197,34 @@
 .userWrapper form > textarea:focus{
     outline: none;
 }
+.custom-file-input{
+    border-bottom: 1px solid black !important;
+  
+}
+.custom-file-input::-webkit-file-upload-button {
+    visibility: hidden;
+  }
+  .custom-file-input::before {
+    content: 'Upload Avatar';
+    /* display: inline-block; */
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 10pt;
+    
+  }
+  .custom-file-input:hover::before {
+    border-color: black;
+  }
+  .custom-file-input:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+  }
 .userCreate{
     padding: 10px;
     background-color: green;
@@ -187,3 +240,46 @@
 .userCreate:hover{
     background-color: rgb(9, 156, 9);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@keyframes slideUp {
+    0% {
+      opacity: 0;
+      transform: translateY(-45%);
+    }
+    25% {
+      opacity: 0.25;
+      transform: translateY(-25%);
+    }
+    50% {
+      opacity: 0.5;
+      transform: translateY(-10%);
+    }
+    75% {
+      opacity: 0.75;
+      transform: translateY(-5%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(-2%);
+    }
+  }
