--- a/src/Page/Admin/SignIn/signup.css
+++ b/src/Page/Admin/SignIn/signup.css
@@ -12,7 +12,7 @@
 .adminsigninForm{
     background-color: #fff;
     margin-top: 100px;
-    width: 50%;
+    width: 30%;
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -86,6 +86,10 @@
     border: none;
     transition: all 0.5s ease-in;
 
+}
+.adminsigninTop2 button:disabled{
+    cursor:not-allowed;
+    background-color: #f70000;
 }
 .adminsigninTop2 button:hover{
     background-color: #f73621;
