--- a/src/Page/Cart/cart.css
+++ b/src/Page/Cart/cart.css
@@ -16,6 +16,11 @@
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
     background-color: #fff;
+    height: 558px;
+    overflow-y: scroll;
+}
+.cartLeftWrapper::-webkit-scrollbar-track{
+    background-color: #fff;
 }
 .cartLeftTop{
     height: 30px;
