--- a/src/Components/Slider/slider.css
+++ b/src/Components/Slider/slider.css
@@ -8,28 +8,24 @@
     background-color: white;
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
-    border-radius: 10px;
     overflow: hidden;
     position: relative;
 }
-.carousel{
-    width: 100%;
-    height: 100%;
-    /* display: flex; */
-    flex-direction: row;
-    /* opacity: 0; */
-    position: absolute;
-    /* transition: opacity ease-in-out 0.1s; */
-}
-.active-anim{
-    opacity: 1 !important;
-}
-.carousel img{
+.slide{
     width: 100%;
     height: 100%;
     position: absolute;
+    opacity: 0;
+    transition: opacity ease-in-out 0.4s;
+}
+.slide img{
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
+.active-anim {
+    opacity: 1;
+  }
 .contDot{
     position: absolute;
     bottom: 10px;
@@ -48,11 +44,23 @@
 .sliactive{
     background: rgb(32, 32, 32);
 }
-.Arrow{
+
+.back{
+    font-size: 70px !important;
     position: absolute;
-    top: 0;
-    margin: 0 15px;
-    font-size: 100px !important;
+    top:40%;
+    margin-left: 10px;
+    text-align: center !important;
+}
+.next{
+    right: 4px;
+}
+.contDot{
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
 }
 
 @media screen and (max-width:700px) {
