--- a/src/Page/SingleProduct/singleProduct.css
+++ b/src/Page/SingleProduct/singleProduct.css
@@ -4,8 +4,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .singleProductTop{
     display: flex;
-    width: 100%;
+    width: 87%;
+    justify-content: center;
+    align-items: center;
 }
