--- a/src/Components/HomeGadget/homeGadget.css
+++ b/src/Components/HomeGadget/homeGadget.css
@@ -104,6 +104,11 @@
     text-decoration: line-through;
 }
 
+
+
+
+
+
 @media screen and (max-width:700px) {
     .homeGadget{
         flex: 5 1 100% !important;
@@ -116,7 +121,27 @@
         margin-bottom: 20px;
     }
     .homeGadgetBottomImg{
-        width: 127px !important;
+        width: 116px !important;
+        height: 133px !important;
+    }
+    .homeGadgetBottomImg img{
+        width: 50px;
+        height: 50px;
+    }
+}
+@media screen and (max-width:1000px) {
+    .homeGadget{
+        flex: 5 1 100% !important;
+    }
+    .homeGadgetWrapper{
+        width: 100%;
+    }
+    .margin{
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+    .homeGadgetBottomImg{
+        width: 108px !important;
         height: 133px !important;
     }
     .homeGadgetBottomImg img{
