--- a/src/Components/TopSales/topsales.css
+++ b/src/Components/TopSales/topsales.css
@@ -125,7 +125,7 @@
 
 @media screen and (max-width:700px) {
     .TopSalesWrapper{
-        width: 100%;
+        width: 87%;
     }
     .TopSalesBottom{
         width: 100%;
@@ -155,6 +155,16 @@
     .TopSalesBottomCard h5{
         text-align: center;
         width:100px;
+    }
+    
+}
+@media screen and (max-width:1000px) {
+    
+    .TopSalesBottom{
+        width: 100%;
+        display: flex;
+        flex-wrap: nowrap;  
+        overflow-x: scroll !important;  
     }
     
 }
