--- a/src/Components/TopSales/topsales.css
+++ b/src/Components/TopSales/topsales.css
@@ -9,7 +9,7 @@
     text-decoration: none !important;
 }
 .TopSalesWrapper{
-    width: 87%;
+    width: 100%;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -17,40 +17,22 @@
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
 }
 .TopSalesTop{
-    background-color: #e61601;
-    height: 30px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
 }
 .TopSalesTop h5{
-    margin-left: 10px;
-    font-size: 17px;
-    color: white;
+    font-size: 30px;
+    color: black;
     font-weight: 700 ;
-    
-}
-.TopSalesTop h6{
-    font-size: 13px;
-    color: white;
-    font-weight: 700 ;
-}
-.TopSales span{
-    margin-right: 10px;
-    font-size: 12px;
-    color: white;
-    padding: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.7 ease-in-out;
-}
-.TopSales span:hover{
-    background-color: #ed311c;
+    text-align: center;
+    margin: 18px 0 20px 0;
 }
 .TopSalesBottom{
     width: 100%;
     display: flex;
-    flex-wrap: wrap;    
+    flex-wrap: wrap; 
+    height: 204px;   
 }
 .TopSalesBottomCard{
     margin: 7px 9px;
@@ -60,15 +42,16 @@
     flex-direction: column;
     align-items: center;
     transition: all 0.7s ease;
+   
     /* background-color: black; */
 }
 .TopSalesBottomCard button{
    visibility: hidden;
 }
-.TopSalesBottomCard:hover{
+/* .TopSalesBottomCard:hover{
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.67);
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
-}
+} */
 .TopSalesBottomCard:hover button{
     visibility: visible;
     width: 100%;
@@ -134,20 +117,8 @@
         overflow-x: scroll !important;  
     }
     .TopSalesTop h5{
-        margin-left: 10px;
-        color: white;
-        font-size: 14px;
+        font-size: 20px;
         font-weight: 500;
-    }
-    .TopSalesTop h6{
-        font-size: 12px;
-        color: white;
-    }
-    .TopSales span{
-        margin-right: 3px;
-        font-size: 14px;
-        padding: 4px;
-        border-radius: 5px;
     }
     .TopSalesBottomCard{
         margin: 3px 7px;
