--- a/src/Components/HomeFashion/homeFashion.css
+++ b/src/Components/HomeFashion/homeFashion.css
@@ -1,76 +1,64 @@
 .homeFashion{
-    flex:5;
+   width: 100vw;
 }
 .homeFashionWrapper{
     width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    -webkit-box-shadow: 0px 1px 16px -8px rgba(0,0,0,0.67);
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
     background-color: white;
 }
-.margin{
-    margin-right: 5px;
-    margin-left: 5px;
-}
 .homeFashionTop{
-    height: 30px;
+    margin-top: 50px;
+    margin-left: 20px;
+    /* margin-right: 20px; */
+    margin-bottom: 30px;
+    flex: 1 1 200px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-}
-.homeFashionTopH5{
-    width: 40%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    background-color: #e61601;
+    justify-content: center;
+    flex-direction: column;
+    background-image: url(../../../public/Images/food.png);
 }
 .homeFashionTop h5{
-    margin: 0;
-    padding: 0;
-    font-size: 17px;
+    font-size: 40px;
+    line-height: 30px;
+    text-shadow: 2px 0 3px #000;
+    margin-bottom: 10px;
     color: white;
-    margin-left: 10px;
 }
 .homeFashionTop span{
-    font-size: 12px;
-    color: black;
+    font-size: 20px;
+    color: #f4a51c;
     cursor: pointer;
-    margin-right: 10px;
+    text-align: center;
    transition: all 0.5s;
 }
 .homeFashionTop span:hover{
-    color: #f43d29;
+    border-left: 10px solid #fff;
+    transition: all .2s ease;
+    padding-left: 5px
 }
-.homeFashionMiddle img{
-    width: 100%;
-    height: 70px;
-    object-fit: cover;
-    transition: all 0.7s ease;
-}
-.homeFashionMiddle img:hover{
-    transform: scale(1.09);
-}
+
 .homeFashionBottom{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    flex: 2 1 700px;
     display: flex;
-    flex-wrap: wrap;
-    cursor: pointer;
+    /* flex-wrap: wrap;
+    cursor: pointer; */
     
 }
 .homeFashionBottomImg{
-    width: 134px !important;
-    height: 150px !important;
+    width: 200px !important;
+    height: 215px !important;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid #dedede;
 }
 .homeFashionBottomImg img{
-    width: 60px;
-    height: 60px;
-    margin: 4px;
+    width: 77px;
+    height: 92px;
+    margin: 10px;
     object-fit: cover;
     transition: 0.5s ease;
     -webkit-transition: 0.5s ease
@@ -86,6 +74,7 @@
     padding: 2px;
     border: none;
     cursor: pointer;
+    margin-top: 10px
 }
 .homeFashionBottomImg img:hover{
     transform: scale(1.1);
@@ -99,10 +88,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width:125px;
+    width:145px;
 }
 .homeFashionBottomImg span{
-    margin: 2px 0;
+    margin: 5px 0;
 }
 .homeFashionBottomImg p{
     padding: 0;
@@ -112,39 +101,59 @@
 
 
 @media screen and (max-width:1000px) {
-    .homeFashion{
-        flex: 5 1 100% !important;
-    }
     .homeFashionWrapper{
-        width: 100%;
+        flex-direction: column;
     }
-    .margin{
-        margin-right: 0;
-        margin-bottom: 20px;
+    .homeFashionTop{
+        margin: 0;
+        flex: 1 1 200px;
+    }
+    .homeFashionTop h5{
+        font-size: 40px;
+        line-height: 30px;
+        text-shadow: 2px 0 3px #000;
+        margin: 10px 0;
+        color: white;
+    }
+    .homeFashionBottom{
+        flex:1 1 ;
+        margin: 0 ;
     }
     .homeFashionBottomImg{
-        width: 108px !important;
-        height: 133px !important;
+        width: 255px !important;
+        height: 162px !important;
     }
     .homeFashionBottomImg img{
         width: 50px;
         height: 50px;
     }
+    .homeFashionBottomImg h5{
+       
+        width:192px;
+    }
 }
 @media screen and (max-width:765px) {
-    .homeFashion{
-        flex: 5 1 100% !important;
-    }
     .homeFashionWrapper{
-        width: 97%;
+        flex-direction: column;
     }
-    .margin{
-        margin-right: 0;
-        margin-bottom: 20px;
+    .homeFashionTop{
+        margin: 0;
+        flex: 1 1 150px;
+    }
+    .homeFashionTop h5{
+        font-size: 40px;
+        line-height: 30px;
+        text-shadow: 2px 0 3px #000;
+        margin: 10px 0;
+        color: white;
+    }
+    .homeFashionBottom{
+        flex:1 1 ;
+        margin: 0 ;
     }
     .homeFashionBottomImg{
-        width: 109px !important;
-        height: 133px !important;
+        width: 118px !important;
+        height: 162px !important;
     }
     .homeFashionBottomImg img{
         width: 50px;
