--- a/src/Components/HomeGadget/homeGadget.css
+++ b/src/Components/HomeGadget/homeGadget.css
@@ -1,151 +1,168 @@
 .homeGadget{
-    flex:5;
-}
-.homeGadgetWrapper{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    -webkit-box-shadow: 0px 1px 16px -8px rgba(0,0,0,0.67);
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67);
-    background-color: white;
-}
-.margin{
-    margin-right: 20px;
-}
-.homeGadgetTop{
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.homeGadgetTopH5{
-    width: 40%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    background-color: #e61601;
-}
-.homeGadgetTop h5{
-    margin: 0;
-    padding: 0;
-    font-size: 17px;
-    color: white;
-    margin-left: 10px;
-}
-.homeGadgetTop span{
-    font-size: 12px;
-    color: black;
-    cursor: pointer;
-    margin-right: 10px;
-   transition: all 0.5s;
-}
-.homeGadgetTop span:hover{
-    color: #f43d29;
-}
-.homeGadgetMiddle img{
-    width: 100%;
-    height: 70px;
-    object-fit: cover;
-    transition: all 0.7s ease;
-}
-.homeGadgetMiddle img:hover{
-    transform: scale(1.09);
-}
-.homeGadgetBottom{
-    display: flex;
-    flex-wrap: wrap;
-    cursor: pointer;
-    
-}
-.homeGadgetBottomImg{
-    width: 134px !important;
-    height: 150px !important;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #dedede;
-}
-.homeGadgetBottomImg img{
-    width: 60px;
-    height: 60px;
-    margin: 4px;
-    object-fit: cover;
-    transition: 0.5s ease;
-    -webkit-transition: 0.5s ease
-}
-.homeGadgetBottomImg button{
-    visibility: visible;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff !important;
-    background-color: #e61601;
-    padding: 2px;
-    border: none;
-    cursor: pointer;
-}
-.homeGadgetBottomImg img:hover{
-    transform: scale(1.1);
-}
-.homeGadgetBottomImg h5{
-    margin: 0;
-    padding: 0;
-    font-size: 13px;
-    font-weight: 800;
-    color: #e61601;
-}
-.homeGadgetBottomImg span{
-    margin: 2px 0;
-}
-.homeGadgetBottomImg p{
-    padding: 0;
-    margin: 0;
-    text-decoration: line-through;
-}
-
-
-
-
-
-
-@media screen and (max-width:765px) {
-    .homeGadget{
-        flex: 5 1 100% !important;
-    }
-    .homeGadgetWrapper{
-        width: 100%;
-    }
-    .margin{
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-    .homeGadgetBottomImg{
-        width: 109px !important;
-        height: 133px !important;
-    }
-    .homeGadgetBottomImg img{
-        width: 50px;
-        height: 50px;
-    }
-}
-@media screen and (max-width:1000px) {
-    .homeGadget{
-        flex: 5 1 100% !important;
-    }
-    .homeGadgetWrapper{
-        width: 100%;
-    }
-    .margin{
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-    .homeGadgetBottomImg{
-        width: 108px !important;
-        height: 133px !important;
-    }
-    .homeGadgetBottomImg img{
-        width: 50px;
-        height: 50px;
-    }
-}
+    width: 100vw;
+ }
+ .homeGadgetWrapper{
+     width: 100%;
+     display: flex;
+     /* -webkit-box-shadow: 0px 1px 16px -8px rgba(0,0,0,0.67);
+     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67); */
+     background-color: white;
+ }
+ .homeGadgetTop{
+     margin-top: 50px;
+     margin-left: 20px;
+     margin-right: 20px;
+     margin-bottom: 30px;
+     flex: 1 1 200px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-direction: column;
+     background-image: url(../../../public/Images/food.png);
+ }
+ .homeGadgetTop h5{
+     font-size: 40px;
+     line-height: 30px;
+     text-shadow: 2px 0 3px #000;
+     margin-bottom: 10px;
+     color: white;
+ }
+ .homeGadgetTop span{
+     font-size: 20px;
+     color: #f4a51c;
+     cursor: pointer;
+     text-align: center;
+    transition: all 0.5s;
+ }
+ .homeGadgetTop span:hover{
+     border-left: 10px solid #fff;
+     transition: all .2s ease;
+     padding-left: 5px
+ }
+ 
+ .homeGadgetBottom{
+     margin-top: 50px;
+     margin-bottom: 30px;
+     flex: 2 1 700px;
+     display: flex;
+     /* flex-wrap: wrap;
+     cursor: pointer; */
+     
+ }
+ .homeGadgetBottomImg{
+     width: 200px !important;
+     height: 215px !important;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     border: 1px solid #dedede;
+ }
+ .homeGadgetBottomImg img{
+     width: 77px;
+     height: 92px;
+     margin: 10px;
+     object-fit: cover;
+     transition: 0.5s ease;
+     -webkit-transition: 0.5s ease
+ }
+ .homeGadgetBottomImg button{
+     visibility: visible;
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     color: #fff !important;
+     background-color: #e61601;
+     padding: 2px;
+     border: none;
+     cursor: pointer;
+     margin-top: 10px
+ }
+ .homeGadgetBottomImg img:hover{
+     transform: scale(1.1);
+ }
+ .homeGadgetBottomImg h5{
+     margin: 0;
+     padding: 0;
+     font-size: 13px;
+     font-weight: 800;
+     color: #e61601;
+     white-space: nowrap;
+     overflow: hidden;
+     text-overflow: ellipsis;
+     width:145px;
+ }
+ .homeGadgetBottomImg span{
+     margin: 5px 0;
+ }
+ .homeGadgetBottomImg p{
+     padding: 0;
+     margin: 0;
+     text-decoration: line-through;
+ }
+ 
+ 
+ @media screen and (max-width:1000px) {
+     .homeGadgetWrapper{
+         flex-direction: column;
+     }
+     .homeGadgetTop{
+         margin: 0;
+         flex: 1 1 200px;
+     }
+     .homeGadgetTop h5{
+         font-size: 40px;
+         line-height: 30px;
+         text-shadow: 2px 0 3px #000;
+         margin: 10px 0;
+         color: white;
+     }
+     .homeGadgetBottom{
+         flex:1 1 ;
+         margin: 0 ;
+     }
+     .homeGadgetBottomImg{
+         width: 255px !important;
+         height: 162px !important;
+     }
+     .homeGadgetBottomImg img{
+         width: 50px;
+         height: 50px;
+     }
+     .homeGadgetBottomImg h5{
+        
+         width:192px;
+     }
+ }
+ @media screen and (max-width:765px) {
+     .homeGadgetWrapper{
+         flex-direction: column;
+     }
+     .homeGadgetTop{
+         margin: 0;
+         flex: 1 1 150px;
+     }
+     .homeGadgetTop h5{
+         font-size: 40px;
+         line-height: 30px;
+         text-shadow: 2px 0 3px #000;
+         margin: 10px 0;
+         color: white;
+     }
+     .homeGadgetBottom{
+         flex:1 1 ;
+         margin: 0 ;
+     }
+     .homeGadgetBottomImg{
+         width: 118px !important;
+         height: 162px !important;
+     }
+     .homeGadgetBottomImg img{
+         width: 50px;
+         height: 50px;
+     }
+     .homeGadgetBottomImg h5{
+        
+         width:104px;
+     }
+ }
