--- a/src/Components/HomeFashion/homeFashion.css
+++ b/src/Components/HomeFashion/homeFashion.css
@@ -43,6 +43,7 @@
     margin-bottom: 30px;
     flex: 2 1 700px;
     display: flex;
+    flex-wrap: wrap;
     /* flex-wrap: wrap;
     cursor: pointer; */
     
@@ -118,9 +119,10 @@
     .homeFashionBottom{
         flex:1 1 ;
         margin: 0 ;
+        
     }
     .homeFashionBottomImg{
-        width: 255px !important;
+        width: 254px !important;
         height: 162px !important;
     }
     .homeFashionBottomImg img{
