--- a/src/Components/HomeGadget/homeGadget.css
+++ b/src/Components/HomeGadget/homeGadget.css
@@ -4,6 +4,7 @@
  .homeGadgetWrapper{
      width: 100%;
      display: flex;
+     flex-wrap: wrap;
      /* -webkit-box-shadow: 0px 1px 16px -8px rgba(0,0,0,0.67);
      box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.67); */
      background-color: white;
@@ -122,7 +123,7 @@
          margin: 0 ;
      }
      .homeGadgetBottomImg{
-         width: 255px !important;
+         width: 254px !important;
          height: 162px !important;
      }
      .homeGadgetBottomImg img{
