--- a/src/Components/TopCat/topCart.css
+++ b/src/Components/TopCat/topCart.css
@@ -110,7 +110,7 @@
         border-radius: 5px;
     }
     .TopCartBottomCard{
-        margin: 15px 18px 15px 0;
+        margin: 15px 18px 15px 20px;
         width: 100px;
         /* background-color: black; */
     }
